objects/Tab_Config__c.object
<CustomObject>
    <fields>
        <fullName>Page_Layout_Config__c</fullName>
        <label>Page Layout Config</label>
        <referenceTo>Page_Layout_Config__c</referenceTo>
        <relationshipLabel>Tabs Config</relationshipLabel>
        <relationshipName>Tabs_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tab Config</label>
    <nameField>
        <label>Tab Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabs Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>